# libkcompactdisc

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  KF5CompactDiscConfig.cmake.in  LibkcompactdiscConfig.cmake.in  Mainpage.dox  Makefile.am  Messages.sh  README  buildindex.c  cdda.c  cddaslave.c  cddb.c  cdinfo.c  cdrom.c  cdtext.c  configure.in.in  database.c  drv_sony.c  drv_toshiba.c  index.c  kcompactdisc.cpp  kcompactdisc.h  kcompactdisc_p.cpp  kcompactdisc_p.h  metainfo.yaml  phonon_interface.cpp  phonon_interface.h  plat_aix.c  plat_bsd386.c  plat_freebsd.c  plat_hpux.c  plat_irix.c  plat_linux.c  plat_linux_audio.c  plat_linux_cdda.c  plat_news.c  plat_openbsd.c  (+12 more)
audio/: CMakeLists.txt  Makefile.am  audio.c  audio.h  audio_alsa.c  audio_arts.c  audio_phonon.cpp  audio_phonon.h  audio_sun.c
cmake/: FindAlsa.cmake  FindCdio.cmake
include/: wm_cdda.h  wm_cddb.h  wm_cdinfo.h  wm_cdrom.h  wm_cdtext.h  wm_config.h  wm_database.h  wm_helpers.h  wm_index.h  wm_platform.h  wm_scsi.h  wm_struct.h  wm_version.h  workman.h  workman_defs.h
po/ar/: libkcompactdisc.po
po/ast/: libkcompactdisc.po
po/be/: libkcompactdisc.po
po/bg/: libkcompactdisc.po
po/bs/: libkcompactdisc.po
po/ca/: libkcompactdisc.po
po/ca@valencia/: libkcompactdisc.po
po/cs/: libkcompactdisc.po
po/csb/: libkcompactdisc.po
po/da/: libkcompactdisc.po
po/de/: libkcompactdisc.po
po/el/: libkcompactdisc.po
po/en_GB/: libkcompactdisc.po
po/eo/: libkcompactdisc.po
po/es/: libkcompactdisc.po
po/et/: libkcompactdisc.po
po/eu/: libkcompactdisc.po
po/fi/: libkcompactdisc.po
po/fr/: libkcompactdisc.po
po/ga/: libkcompactdisc.po
po/gl/: libkcompactdisc.po
po/he/: libkcompactdisc.po
po/hi/: libkcompactdisc.po
po/hne/: libkcompactdisc.po
po/hr/: libkcompactdisc.po
po/hu/: libkcompactdisc.po
po/ia/: libkcompactdisc.po
po/is/: libkcompactdisc.po
po/it/: libkcompactdisc.po
po/ja/: libkcompactdisc.po
po/ka/: libkcompactdisc.po
po/kk/: libkcompactdisc.po
po/km/: libkcompactdisc.po
po/ko/: libkcompactdisc.po
po/lt/: libkcompactdisc.po
po/lv/: libkcompactdisc.po
po/mk/: libkcompactdisc.po
po/mr/: libkcompactdisc.po
po/nb/: libkcompactdisc.po
po/nds/: libkcompactdisc.po
po/nl/: libkcompactdisc.po
po/nn/: libkcompactdisc.po
po/oc/: libkcompactdisc.po
po/pa/: libkcompactdisc.po
po/pl/: libkcompactdisc.po
po/pt/: libkcompactdisc.po
po/pt_BR/: libkcompactdisc.po
po/ro/: libkcompactdisc.po
po/ru/: libkcompactdisc.po
po/sa/: libkcompactdisc.po
po/se/: libkcompactdisc.po
po/sk/: libkcompactdisc.po
po/sl/: libkcompactdisc.po
po/sq/: libkcompactdisc.po
po/sr/: libkcompactdisc.po
po/sr@ijekavian/: libkcompactdisc.po
po/sr@ijekavianlatin/: libkcompactdisc.po
po/sr@latin/: libkcompactdisc.po
po/sv/: libkcompactdisc.po
po/ta/: libkcompactdisc.po
po/th/: libkcompactdisc.po
po/tr/: libkcompactdisc.po
po/ug/: libkcompactdisc.po
po/uk/: libkcompactdisc.po
po/wa/: libkcompactdisc.po
po/zh_CN/: libkcompactdisc.po
po/zh_TW/: libkcompactdisc.po
src/: CMakeLists.txt  KF5CompactDiscConfig.cmake.in  audiofile.cpp  audiofile.h  cdioaudiofile.cpp  cdioaudiofile.h  config-alsa.h.cmake  disc.cpp  disc.h  kcompactdisc.cpp  kcompactdisc.h  kcompactdisc_p.cpp  kcompactdisc_p.h  phonon_interface.cpp  phonon_interface.h  track.cpp  track.h  wmlib_interface.cpp  wmlib_interface.h
src/attic/: kcompactdisc_p.cpp
src/attic/wmlib/: drv_toshiba.c  plat_svr4.c  scsi.c
src/attic/wmlib/include/: wm_cdrom.h  wm_cdtext.h
src/wmlib/: cdda.c  cddb.c  cdrom.c  drv_sony.c  plat_freebsd.c  plat_irix.c  plat_linux.c  plat_openbsd.c  plat_osf1.c  plat_sun_cdda.c  wm_helpers.c
src/wmlib/audio/: audio.c  audio.h  audio_alsa.c  audio_phonon.cpp  audio_phonon.h
src/wmlib/include/: wm_cdda.h  wm_cdinfo.h  wm_cdtext.h  wm_platform.h  wm_struct.h
tests/: CMakeLists.txt  ripdisc.cpp  testkcd.cpp
wmlib/: CMakeLists.txt  README  cdda.c  cddb.c  cdinfo.c  cdrom.c  cdtext.c  configure.in.in  drv_sony.c  drv_toshiba.c  plat_aix.c  plat_bsd386.c  plat_freebsd.c  plat_hpux.c  plat_irix.c  plat_linux.c  plat_linux_cdda.c  plat_news.c  plat_openbsd.c  plat_osf1.c  plat_scor5.c  plat_sun.c  plat_sun_cdda.c  plat_svr4.c  plat_template.c  plat_ultrix.c  scsi.c  wm_helpers.c
wmlib/audio/: audio.c  audio.h  audio_alsa.c  audio_arts.c  audio_phonon.cpp  audio_sun.c
wmlib/include/: wm_cdda.h  wm_cddb.h  wm_cdinfo.h  wm_cdrom.h  wm_cdtext.h  wm_config.h  wm_helpers.h  wm_platform.h  wm_scsi.h  wm_struct.h  wm_version.h  workman.h  workman_defs.h
